# anki-card-ai-builder

./: .env.example  .gitignore  BLOG-1.md  BLOG.md  Makefile  README.md  architecture.md  pyproject.toml  test_int.xlsx  test_vocab.csv
input/english/: 23454ABC-D3B3-4100-AB7F-A1E62F111C02.heic  3BDAB3E1-19C9-455C-90FB-2C616D281BEF.heic  64AE2B12-F1F8-4A8F-939A-9FD40FFC44F0.heic  6F35F786-86B5-4FD4-A631-09B479DBFE08.heic  C1057484-0798-4897-8C9B-E2345C80C511.heic  CAC5617A-10B4-4B30-B19F-AE2BCE946D00.heic  E61224DB-1490-49E8-B9E4-699D0187D045.heic  E87441D8-98E1-465C-B64B-6A14CB293963.heic
input/french/: 2E7E120F-7440-431A-BA3F-6B80796EDCC2.heic  2ED55825-7095-430B-8622-07FC814A350D.heic  715D4C68-A88B-4917-AB3F-B044DD463A94.heic  7B723F55-0EC5-4922-82BB-8B11737CBD67.heic  7C1EADE6-AC72-4289-BC29-B05D4C5C1F30.heic  8794B0E6-C5B9-4166-9EEC-4E3BDD7EE7FE.heic  BE0F8108-CD9C-42AE-9FC1-695BE9DB5382.heic  CBB87819-7AB7-4463-B057-5D6A29952CE5.heic
src/anki_builder/: cli.py  config.py  constants.py  schema.py  state.py
src/english/: 3D4E925C-2B9A-4C36-9FBD-5961F228B4DB.heic  5D8DD2BC-76AA-47DC-8324-F44ABF346D62.heic  5F2D2FB5-D1AE-4A92-BB29-9665F5CF6E34.heic  6447EF8E-3FA7-417B-9587-1A22750577EA.heic  817624C1-733A-40EF-94B5-57106651C916.heic  (+4 more)
tests/: test_cli.py  test_config.py  test_enrich_ai.py  test_export_apkg.py  test_ingest_excel.py  test_ingest_gdrive.py  test_ingest_image.py  test_ingest_pdf.py  test_integration.py  test_media_audio.py  test_media_image.py  test_media_image_local.py  test_merge.py  test_schema.py  test_state.py  test_vocabulary.py
(+37 files in other folders)
