[project]
name = "anki-builder"
version = "0.1.0"
description = "AI-powered Anki flashcard generator for language learning"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "openpyxl>=3.1",
    "pymupdf>=1.24",
    "genanki>=0.13",
    "anthropic>=0.40",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pyyaml>=6.0",
    "gtts>=2.5.4",
    "python-dotenv>=1.2.2",
    "pillow-heif>=1.3.0",
]

[project.scripts]
anki-builder = "anki_builder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
