[project]
name = "anki-builder"
version = "0.1.0"
description = "AI-powered Anki flashcard generator for language learning"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "openpyxl>=3.1",
    "pymupdf>=1.24",
    "genanki>=0.13",
    "anthropic>=0.40",
    "httpx>=0.27",
    "pydantic>=2.9",
    "gtts>=2.5.4",
    "python-dotenv>=1.2.2",
    "pillow-heif>=1.3.0",
    "google-genai>=1.0.0",
    "pillow>=12.2.0",
]

[project.scripts]
ankids = "anki_builder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.11",
    "mypy>=1.15",
]

[tool.ruff]
target-version = "py312"
line-length = 200

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
